@startuml erd_star_ua

skinparam linetype ortho

entity Заявка_кандидата {
  Код_заявки_кандидата
  Ім'я
  Прізвище
  Номер_телефону
  Електронна_пошта
  Дата_народження
  Номер_паспорта
  Номер_водійського_посвідчення
  Код_місцезнаходження_кандидата
  Код_вакансії
  Код_категорії_вакансії
  Код_компанії
  Код_місцезнаходження_компанії
  Код_виробничої_галузі
  Код_статус_працевлаштування
  Дата_створення_заявки
}

entity Місцезнаходження {
  Код_місцезнаходження
  Назва
}

entity Вакансія {
  Код_вакансії
  Назва
  Заробітня_плата
  Додаткова_інформація
}

entity Категорія_вакансії {
  Код_категорії_вакансії
  Назва
}

entity Компанія {
  Код_компанії
  Назва
  Номер_телефону
}

entity Виробнича_галузь {
  Код_виробничної_галузі
  Назва
}

entity Статус_працевлаштування {
  Код_статусу_працевлаштування
  Назва
}

Заявка_кандидата }o--|| Місцезнаходження
Заявка_кандидата }o--|| Вакансія
Заявка_кандидата }o--|| Категорія_вакансії
Заявка_кандидата }o--|| Компанія
Заявка_кандидата }o--|| Виробнича_галузь
Заявка_кандидата }o--|| Статус_працевлаштування

@enduml

@startuml erd_star_en

skinparam linetype ortho

entity Candidate_application {
  candidate_application_id
  first_name
  last_name
  phone_number
  email
  birth_date
  passport_code
  driver_license_code
  candidate_location_id
  vacancy_id
  vacancy_category_id
  company_id
  company_location_id
  production_branch_id
  employment_status_id
  created_at
}

entity Location {
  location_id
  name
}

entity Vacancy {
  vacancy_id
  name
  salary
  additional_info
}

entity Vacancy_category {
  vacancy_category_id
  name
}

entity Company {
  company_id
  name
  phone_number
}

entity Production_branch {
  production_branch_id
  name
}

entity Employment_status {
  employment_status_id
  name
}

Candidate_application }o--|| Location
Candidate_application }o--|| Vacancy
Candidate_application }o--|| Vacancy_category
Candidate_application }o--|| Company
Candidate_application }o--|| Production_branch
Candidate_application }o--|| Employment_status

@enduml